--- a/public/signup.html
+++ b/public/signup.html
@@ -22,12 +22,20 @@
         <h2>Sign Up Form</h2>
         <form class="signup">
           <div class="form-group">
+            <label for="inputUsername">Username</label>
+            <input type="text" class="form-control" id="username-input" placeholder="Name">
+          </div>
+          <div class="form-group">
             <label for="exampleInputEmail1">Email address</label>
             <input type="email" class="form-control" id="email-input" placeholder="Email">
           </div>
           <div class="form-group">
             <label for="exampleInputPassword1">Password</label>
             <input type="password" class="form-control" id="password-input" placeholder="Password">
+          </div>
+          <div class="form-group">
+            <label for="exampleInputInterest">Interest</label>
+            <input type="text" class="form-control" id="interest-input" placeholder="interest">
           </div>
           <div style="display: none" id="alert" class="alert alert-danger" role="alert">
             <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
