made the event maker page, updated the events page to style, and also re named the title on every page.

--- a/public/events.html
+++ b/public/events.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport"content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"/>
-    <title>Hello, world!</title>
+    <title>Events | Event App</title>
     <link href="https://fonts.googleapis.com/css2?family=Gravitas+One&family=Heebo&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="stylesheets/events.css" />
@@ -58,7 +58,25 @@
         <hr>
         <div id="date">Date: <a href="#"> 4/14/20</a></div>
         <div id="location">Location: <a href="#"> 404 Error dr</a></div>
-        <div id="userUpload">Uploaded By: User Name</div>
+        <div id="userUpload">Category: Sports</div>
+        <a href="#" class="button">Save!</a>
+        <br>
+      </div>
+    </div>
+       
+    <div class="containerB">
+      <div class="item-c">
+        <div id="titleLink"><h2>Title |<a href="#"> test.com</a></h2></div>
+        <hr>
+        <div id="descriptionT">Description:</div>
+        <div id="descriptionP">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod quis enim natus maiores hic nulla,
+             dolorum corporis sed! Corporis dignissimos temporibus 
+            officiis impedit reiciendis inventore accusamus consequatur omnis optio sapiente.
+        </div>
+        <hr>
+        <div id="date">Date: <a href="#"> 4/14/20</a></div>
+        <div id="location">Location: <a href="#"> 404 Error dr</a></div>
+        <div id="userUpload">Category: Sports</div>
         <a href="#" class="button">Save!</a>
         <br>
       </div>
@@ -76,25 +94,7 @@
         <hr>
         <div id="date">Date: <a href="#"> 4/14/20</a></div>
         <div id="location">Location: <a href="#"> 404 Error dr</a></div>
-        <div id="userUpload">Uploaded By: User Name</div>
-        <a href="#" class="button">Save!</a>
-        <br>
-      </div>
-    </div>
-
-    <div class="containerB">
-      <div class="item-c">
-        <div id="titleLink"><h2>Title |<a href="#"> test.com</a></h2></div>
-        <hr>
-        <div id="descriptionT">Description:</div>
-        <div id="descriptionP">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod quis enim natus maiores hic nulla,
-             dolorum corporis sed! Corporis dignissimos temporibus 
-            officiis impedit reiciendis inventore accusamus consequatur omnis optio sapiente.
-        </div>
-        <hr>
-        <div id="date">Date: <a href="#"> 4/14/20</a></div>
-        <div id="location">Location: <a href="#"> 404 Error dr</a></div>
-        <div id="userUpload">Uploaded By: User Name</div>
+        <div id="userUpload">Category: Sports</div>
         <a href="#" class="button">Save!</a>
         <br>
       </div>
