--- a/public/signup.html
+++ b/public/signup.html
@@ -14,7 +14,7 @@
 <body>
   <div class="container">
     <div class="row">
-      <div class="item-a col-md-6 col-md-offset-3">
+      <div class="item-a col-md-offset-4">
         <h2>Sign Up Form <div><svg id="ball" width="40" height="40" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g id="Group 11">
             <g id="Group 10">
