changed view for desktop

--- a/public/signup.html
+++ b/public/signup.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Sign-up | Event App</title>
+  <title>Passport Authentication</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
@@ -14,7 +14,7 @@
 <body>
   <div class="container">
     <div class="row">
-      <div class="item-a col-md-offset-4">
+      <div class="item-a col-md-10 ">
         <h2>Sign Up Form <div><svg id="ball" width="40" height="40" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g id="Group 11">
             <g id="Group 10">
@@ -60,6 +60,7 @@
         <p>Or log in <a href="/login">here</a></p>
       </div>
     </div>
+    <!-- <div class= "item-b"></div> -->
   </div>
 
 
