nav bar links update

--- a/public/buildEvent.html
+++ b/public/buildEvent.html
@@ -29,9 +29,9 @@
       <div class="nav">
         <div class="nav-wrapper">
           <nav class="nav-links">
-            <a href="#">Home</a><br>
-            <a href="#">Saved</a><br>
-            <a href="#">About</a><br>
+            <a href="/">Home</a><br>
+						<a href="login.html">Login</a><br>
+						<a href="https://github.com/Dorinetk/eventplanner">About</a><br>
           </nav>
         </div>
       </div>
