--- a/public/home.html
+++ b/public/home.html
@@ -25,13 +25,14 @@
         <div class="meat"></div>
         <div class="bottom-bun"></div>
       </label>
+   
 
       <div class="nav">
         <div class="nav-wrapper">
           <nav class="nav-links">
-            <a href="#">Home</a><br>
-            <a href="#">Saved</a><br>
-            <a href="#">About</a><br>
+            <a href="/">Home</a><br>
+						<a href="login.html">Login</a><br>
+						<a href="https://github.com/Dorinetk/eventplanner">About</a><br>
           </nav>
         </div>
       </div>
