--- a/public/login.html
+++ b/public/login.html
@@ -44,8 +44,8 @@
             <label for="exampleInputPassword1">Password</label>
             <input type="password" class="form-control" id="password-input" placeholder="Password">
           </div>
-          <!-- <a href="/" class="button">Log In!</a> -->
-          <a href="#" class="button">Log In!</a>
+          <button  class="button" type="submit">Login</button>
+          <!-- <a href="#" class="button">Log In!</a> -->
         </form>
         <br />
         <p>Or sign up <a href="/signup">here</a></p>
