--- a/public/signup.html
+++ b/public/signup.html
@@ -71,7 +71,8 @@
             <span class="sr-only">Error:</span> <span class="msg"></span>
           </div>
           <div>
-            <a href="#" class="button">Sign Up!</a>
+            
+            <button  class="button" type="submit">Sign Up!</button>
           </div>
         </form>
         <br />
