--- a/public/buildEvent.html
+++ b/public/buildEvent.html
@@ -48,7 +48,7 @@
             </div>
             <div class="msg">
                 <textarea placeholder="Description:" id="description-input"></textarea>
-                <button type="submit">Submit!</button>
+                <button class="button" type="submit">Submit!</button>
             </div>
           </form>
     </div>
